--- a/azure-spring-boot-samples/azure-active-directory-b2c-oidc-spring-boot-sample/src/main/resources/templates/home.html
+++ b/azure-spring-boot-samples/azure-active-directory-b2c-oidc-spring-boot-sample/src/main/resources/templates/home.html
@@ -34,7 +34,7 @@
     <h3>Welcome back <span style="color:cyan" th:text="${name}"></span>!</h3>
     <table border="1">
         <tr><th>Principal</th><th>Value</th></tr>
-        <tr><th>name</th><th th:text="${name}"></th></tr>
+<!--        <tr><th>name</th><th th:text="${name}"></th></tr>-->
         <tr><th>grant_type</th><th th:text="${grant_type}"></th></tr>
         <tr><th>at_hash</th><th th:text="${at_hash}"></th></tr>
         <tr><th>sub</th><th th:text="${sub}"></th></tr>
@@ -56,6 +56,7 @@
         <tr><th>iat</th><th th:text="${iat}"></th></tr>
         <tr><th>family_name</th><th th:text="${family_name}"></th></tr>
         <tr><th>tfp</th><th th:text="${tfp}"></th></tr>
+        <tr><th>extension_impersonation_email_id</th><th th:text="${extension_impersonation_email_id}"></th></tr>
     </table>
 </div>
 
